aligned the center line properly according to figma design, add correct number of lines to text in desktop mode

--- a/themes/scalereal/static/css/style.css
+++ b/themes/scalereal/static/css/style.css
@@ -3369,52 +3369,92 @@ lottie-player {
 .client-success-stories-section .container .box {
   padding-left: 98px;
   padding-right: 98px;
-  min-width: 1190px;
-  width: auto; 
+  width: 1190px; 
 }
  
 .client-success-stories-section .box::before {
   content: "";
   position: absolute;
-  left: 50%;
-  top: 15%;
-  width: 1px;
+  left: 546px;
+  top: 85px;
+  bottom: 85px;
+  right: 642;
+  width: 2px;
   height: 70%;
   background-color: #cccbcb;
   margin-left: -1px;
 }
 .client-success-stories-section .container .box .heading.box-content{
-  padding-right: 25px;  
+  padding: 0px;  
   margin-top: 100px;
 }
-.client-success-stories-section .container .box .box-content {
-  padding-left: 30px;
-  background-color: yellow;
-  /* padding-right: 25px; */
-  width: 100%; 
+.client-success-stories-section .container .box .heading.box-content {
+  padding-left: 0px;
+}
+.client-success-stories-section .container .box .box-content{
+  margin: 0px;
+}
+.client-success-stories-section .container .box .box-content .owl-one .owl-dots {
+  position: absolute;
+  margin-top: 24px;
+  margin-left: 231px;
+  margin-bottom: 87px;
+}
+.client-success-stories-section .container .box .box-content p{
+  color: #666;
+  font-family: "Open Sans";
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  max-width: 423px;}
+.client-success-stories-section .container .box .box-content h3{
+  max-width: 431px;
+  padding-top: 0px;
+  margin-top: 0px;
+  padding-bottom: 20px; 
 }
 .client-success-stories-section .container .box .box-content img{
-  width: 100%;
+  width: 100%; 
 }
 @media (max-width:767.98px) {
   .client-success-stories-section .container .box {
-    padding-left: 98px;
-    padding-right: 98px;
+    padding-left: 17px;
+    padding-right: 17px;
     width: auto;
-    min-width: 100%;
+    /* min-width: 100%; */
   }
   .client-success-stories-section .box::before {
    display: none;
   }
   .client-success-stories-section .container .box .heading.box-content{
-  padding:0px;  
-  margin-top: 40px;
+    padding:0px;  
+    margin-top: 0px;
+    display: flex;
+    flex-direction: column;
+    text-align:  center;
+    align-items: center;
+  }
+  .client-success-stories-section .container .box .heading.box-content h2{
+    width: 240px;
+    color: #333;
+    text-align: center; 
+    font-size: 26px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 36px;  
+  }
+  .client-success-stories-section .container .box .heading.box-content p{
+    width: 294px;
+    color: #666;
+    text-align: center; 
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28px; 
   }
   .client-success-stories-section .container .box .box-content {
-    padding:0px;
-    background-color: yellow;
-    
-    /* padding-right: 25px; */
+    padding:0px; 
     width: 100%; 
   }
 }
@@ -3423,22 +3463,14 @@ lottie-player {
     padding-left: 17px;
     padding-right: 17px;
     width: auto;
-    min-width: 100%;
+    /* min-width: 100%; */
   }
   .client-success-stories-section .box::before {
-    content: "";
-    position: absolute;
-    left: 50%;
-    top: 15%;
-    width: 1px;
-    height: 70%;
-    background-color: #cccbcb;
-    margin-left: -1px;
+  display: none;
   }
   .client-success-stories-section .container .box .box-content {
     padding:0px;
-    background-color: pink;
-    /* padding-right: 25px; */
+    background-color: pink; 
     
     width: 100%; 
   }
@@ -3449,7 +3481,7 @@ lottie-player {
     background-color: red;
   }
 }
-@media (min-width:1023.98px) {
+/* @media (min-width:1023.98px) {
   .client-success-stories-section .container .box {
     padding-left: 17px;
     padding-right: 17px;
@@ -3468,15 +3500,12 @@ lottie-player {
   }
   .client-success-stories-section .container .box .box-content {
     padding:0px;
-    background-color: pink;
-    /* padding-right: 25px; */
-    
+    background-color: pink;  
     width: 100%; 
   }
-   .client-success-stories-section .container .box .heading.box-content{
-    padding:0px;  
-    margin-top: 40px;  
-    padding-top: 0px;
-    background-color: red;
+   .client-success-stories-section .container .box .heading.box-content{ 
+    margin-top: 100px;  
+    padding: 0px;
+    background-color: palegoldenrod;
   }
-}
+} */
